changes to main.cpp

--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -115,6 +115,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\demo4-server\base64.cpp" />
+    <ClCompile Include="..\..\..\demo4-server\main.cpp" />
+    <ClCompile Include="..\..\..\demo4-server\sha1.cpp" />
+    <ClCompile Include="..\..\..\demo4-server\websocket.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\demo4-server\base64.h" />
+    <ClInclude Include="..\..\..\demo4-server\sha1.h" />
+    <ClInclude Include="..\..\..\demo4-server\websocket.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
