--- a/Client_Code/Client_Code.csproj
+++ b/Client_Code/Client_Code.csproj
@@ -220,7 +220,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\Ball.cs" />
+    <Compile Include="Assets\Scripts\ConnectBtn.cs" />
+    <Compile Include="Assets\Scripts\MySocketHandler.cs" />
     <Compile Include="Assets\Scripts\Player0.cs" />
+    <Compile Include="Assets\Scripts\Score0.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
